# libport

./: .gdbinit  .gitattributes  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  LICENSE.template  Makefile.am  README  THANKS  bootstrap  configure.ac  flags.mk  misc-to-libport  qiproject.xml
build-aux/: .automerge  ChangeLog  Doxyfile.in  README  acx_pthread.m4  autotroll.m4  autotroll.mk  ax-lib-postgresql.m4  ax-prefix-config-h.m4  ax_boost.m4  ax_boost_base.m4  ax_boost_thread.m4  base.as  base.m4sh  bison++.in  boost.m4  bootstrap  bootstrap.mk  (+120 more)
doc/: Makefile.am  doxygen.sh.in  fcntl.cc  libport.tex  local.mk
include/: Makefile.am  libport.mk
include/libport/: _errlist.hh  algorithm  algorithm.hxx  allocator-static.hh  allocator-static.hxx  asio.hh  asio.hxx  assert.hh  atomic.hh  attributes.hh  backtrace.hh  backtrace.hxx  base64.hh  bench.hh  bind.hh  boost-error.hh  boost-error.hxx  buffer-stream.hh  cassert  cast.hh  cast.hxx  cctype  cctype.hxx  cerrno  cli.hh  cli.hxx  cmath  cmath.hxx  compilation.hh  compiler-section.hh  compiler.hh  compiler.hxx  condition.hh  condition.hxx  config.h.in  containers.hh  containers.hxx  contract.hh  csignal  cstdint  (+174 more)
include/libport/arpa/: inet.h
include/libport/bits/: errlist.hh
include/libport/serialize/: exception.hh  i-serializer.hh  o-serializer.hh  serializable.hh  serializer.hh  serializer.hxx  xml-i-serializer.hh  xml-o-serializer.hh
include/libport/sys/: param.h  prctl.h  select.h  socket.h  stat.h  stat.hxx  time.h  time.hxx  types.h  utsname.h  utsname.hxx  wait.h
include/libport/tr1/: type_traits
include/sched/: configuration.hh  coroutine-boost.hxx  coroutine-coro.hxx  coroutine-data.hh  coroutine-data.hxx  coroutine-hooks.hh  coroutine-local-storage.hh  coroutine-local-storage.hxx  coroutine.hh  coroutine.hxx  exception.hh  exception.hxx  export.hh  fwd.hh  job.hh  job.hxx  local.mk  scheduler.hh  scheduler.hxx  tag.hh  tag.hxx
include/sched/libcoroutine/: Common.h  Coro.h  PortableUContext.h  local.mk  taskimpl.h
include/serialize/: binary-i-serializer.hh  binary-i-serializer.hxx  binary-o-serializer.hh  binary-o-serializer.hxx  exception.hh  export.hh  fwd.hh  i-serializer.hh  i-serializer.hxx  local.mk  o-serializer.hh  o-serializer.hxx  serializable.hh  serialize.hh  serializer.hh  serializer.hxx  xml-i-serializer.hh  xml-o-serializer.hh
include/tinyxml/: export.hh  local.mk  tinystr.h  tinyxml.h
include/urbi-crypto/: crypt.hh  cryptaes.hh  crypto.hh  cryptrsa.hh  debug-log.hh  exception.hh  mangle-defines.hh  openssl.hh  sign.hh  signsha1.hh  utility.hh  xutility.hh
lib/: ChangeLog  Makefile.am  README  cli.cc  cstring  libport-sources.mk  read-stdin.cc  sched.cc  tokenizer.cc
lib/libport/: Makefile.am  _errlist.cc  asio-impl.hxx  asio-ssl.cc  asio.cc  assert.cc  backtrace.cc  base64.cc  buffer-stream.cc  cli.cc  compiler.cc  contract.cc  csignal.cc  cstdio.cc  cstdlib.cc  cstring.cc  ctime.cc  damerau-levenshtein-distance.cc  debug.cc  deref.cc  dirent.cc  echo.cc  errlist.cc  escape.cc  fcntl.cc  fd-stream.cc  file-library.cc  file-system.cc  fnmatch.cc  format.cc  hmac-sha1.cc  indent.cc  input-arguments.cc  io-stream.cc  ip-semaphore.cc  libport-sources.mk  local.mk  locale.cc  markup-ostream.cc  option-parser.cc  (+31 more)
lib/libport/serialize/: exception.cc  i-serializer.cc  o-serializer.cc  serializer.cc  xml-i-serializer.cc  xml-o-serializer.cc
lib/libport/sys/: utsname.cc
lib/sched/: configuration.cc  coroutine-hooks.cc  coroutine.hxx  exception.hh  job.cc  job.hh  job.hxx  local.mk  pthread-coro.cc  pthread-coro.hh  pthread-coro.hxx  scheduler.cc  scheduler.hh  scheduler.hxx  tag.cc  tag.hh  testcoro.cc  uclibc-workaround.cc
lib/sched/libcoroutine/: .gitattributes  Coro.c  Coro.cc  Coro.h  PortableUContext.c  context.c  local.mk
lib/serialize/: binary-i-serializer.cc  binary-o-serializer.cc  exception.cc  i-serializer.cc  local.mk  o-serializer.cc  serializer.cc  xml-i-serializer.cc  xml-o-serializer.cc
lib/tests/: Makefile.am  common_ufloat1.cc  singleton1.cc  test-indent.cc  udoubletab1.cc  uffloat1.cc  ufloattab1.cc
lib/tinyxml/: local.mk  xmltest.cpp
lib/urbi-crypto/: ChangeLog  Makefile.am  applink.c  crypt.cc  cryptaes.cc  crypto.cc  cryptrsa.cc  debug-log.cc  openssl.cc  sign.cc  signsha1.cc  urbi-crypto.mk  utility.cc
libport/: ChangeLog  Makefile.am  README  assert.hh  cli.cc  cli.hh  compiler.hh  containers.hh  containers.hxx  contract.cc  contract.hh  cstdio  deref.cc  deref.hh  deref.hxx  detect_win32.h  escape.cc  escape.hh  escape.hxx  exception.hh  exception.hxx  file-system.cc  file-system.hh  foreach.hh  fwd.hh  hash.hh  indent.cc  libport-sources.mk  libport.mk  lockable.hh  network.h  package-info.cc  package-info.hcc  package-info.hh  pair.hh  program-name.cc  program-name.hh  ref-pt.hh  sched.cc  sched.hh  (+30 more)
libport/sys/: stat.h
libport/tests/: Makefile.am  common_ufloat1.cc  singleton1.cc  singleton2.cc  test-deref.cc  test-escape.cc  test-indent.cc  test-separator.cc  udouble1.cc  udoubletab1.cc  uffloat1.cc  uffloattab1.cc  ufloat1.cc  ufloattab1.cc  ullfp1.cc  ullfptab1.cc
libport/vcs/: local.rb
sdk/: ChangeLog  Makefile.am  eval_makefile.pl  local.mk  param.mk.in  uinstall.in  umake-link.in  umake.in  urbi-sdk.m4  wrapper.sh.in
src/: Makefile.am
tests/: Makefile.am  local.mk  test.sh  testme.cc
tests/libport/: Makefile.am  allocator-static.cc  any.cc  asio.cc  assert.cc  atomic.cc  attributes.cc  backtrace.cc  base64.cc  cli.cc  cmath.cc  common-ufloat1.cc  compiler.cc  condition.cc  containers.cc  cstdlib.cc  damerau-levenshtein-distance.cc  debug-dummy.cc  debug.cc  deref.cc  dirent.cc  erase-if.cc  escape.cc  fd-stream.cc  fifo.cc  file-library.cc  finally.cc  fnmatch.cc  foreach.cc  format.cc  has-if.cc  has_if.cc  hash.cc  hmac-sha1.cc  indent.cc  input-arguments.cc  intrusive-ptr-serialize.cc  intrusive-ptr.cc  io-stream.cc  local.mk  (+66 more)
tests/sched/: debug.cc  local.mk  sched-except.cc  sched.cc  thread-coro.cc
tests/serialize/: local.mk  serialize.cc
tests/urbi-crypto/: Makefile.am  sign.cc  simple.cc  verify.cc
(+189 files in other folders)
