cmake_minimum_required(VERSION 2.8)
project(libport)

find_package(qibuild)

# Create a executable named libport
# with the source file: main.cpp
qi_create_bin(alibport "main.cpp")

# Add a simple test:
enable_testing()
qi_create_test(test_libport "test.cpp")
cmake_minimum_required(VERSION 2.6.4)
project(libport)

qi_create_config_h(CONFIG_H, "include/libport/config.h.in" "libport/config.h")

add_definitions(-DLIBPORT_URBI_UFLOAT_DOUBLE)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/sched/libcoroutine)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})


ADD_CUSTOM_COMMAND(
  OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/include/libport/format.hh
  COMMAND python
  ARGS include/libport/format.hh.gen > ${CMAKE_CURRENT_BINARY_DIR}/include/libport/format.hh
  )

set(PUBLIC_HEADERS include/libport/algorithm
include/libport/algorithm.hxx
include/libport/allocator-static.hh
include/libport/allocator-static.hxx
include/libport/arpa/inet.h
include/libport/asio.hh
include/libport/asio.hxx
include/libport/atomic.hh
include/libport/attributes.hh
include/libport/backtrace.hh
include/libport/backtrace.hxx
include/libport/base64.hh
include/libport/bench.hh
include/libport/bind.hh
include/libport/boost-error.hh
include/libport/boost-error.hxx
include/libport/buffer-stream.hh
include/libport/cassert
include/libport/cast.hh
include/libport/cast.hxx
include/libport/cctype
include/libport/cctype.hxx
include/libport/cerrno
include/libport/cli.hh
include/libport/cli.hxx
include/libport/cmath
include/libport/cmath.hxx
include/libport/compilation.hh
include/libport/compiler-section.hh
include/libport/compiler.hh
include/libport/condition.hh
include/libport/condition.hxx
include/libport/containers.hh
include/libport/containers.hxx
include/libport/csignal
include/libport/cstdint
include/libport/cstdio
include/libport/cstdlib
include/libport/cstdlib.hxx
include/libport/cstring
include/libport/cstring.hxx
include/libport/ctime
include/libport/damerau-levenshtein-distance.hh
include/libport/debug.hh
include/libport/debug.hxx
include/libport/deref.hh
include/libport/deref.hxx
include/libport/destructible.hh
include/libport/destructible.hxx
include/libport/detect-win32.h
include/libport/dirent.h
include/libport/dlfcn.h
include/libport/echo.hh
include/libport/echo.hxx
include/libport/errors.hh
include/libport/escape.hh
include/libport/escape.hxx
include/libport/exception.hh
include/libport/exception.hxx
include/libport/export.hh
include/libport/fcntl.h
include/libport/fd-stream.hh
include/libport/fifo.hh
include/libport/fifo.hxx
include/libport/file-library.hh
include/libport/file-library.hxx
include/libport/file-system.hh
include/libport/finally.hh
include/libport/finally.hxx
include/libport/fnmatch.h
include/libport/fnmatch.hxx
include/libport/foreach.hh
${CMAKE_CURRENT_BINARY_DIR}/include/libport/format.hh
include/libport/fwd.hh
include/libport/generate-libport-config-h
include/libport/hash.hh
include/libport/hierarchy.hh
include/libport/hmac-sha1.hh
include/libport/indent.hh
include/libport/input-arguments.hh
include/libport/input-arguments.hxx
include/libport/instance-tracker.hh
include/libport/instance-tracker.hxx
include/libport/instrument.hh
include/libport/intrusive-ptr.hh
include/libport/intrusive-ptr.hxx
include/libport/io-stream.hh
include/libport/iostream
include/libport/ip-semaphore.hh
include/libport/lexical-cast.hh
include/libport/local-data.hh
include/libport/local-data.hxx
include/libport/local.mk
include/libport/locale.hh
include/libport/locale.hxx
include/libport/lockable.hh
include/libport/lockable.hxx
include/libport/map.hh
include/libport/map.hxx
include/libport/markup-ostream.hh
include/libport/meta.hh
include/libport/netdb.h
include/libport/network.h
include/libport/option-parser.hh
include/libport/option-parser.hxx
include/libport/package-info.hh
include/libport/pair.hh
include/libport/pair.hxx
include/libport/path.hh
include/libport/path.hxx
include/libport/pid-file.hh
include/libport/pod-cast.hh
include/libport/pod-cast.hxx
include/libport/preproc.hh
include/libport/program-name.hh
include/libport/pthread.h
include/libport/pthread.hxx
include/libport/range.hh
include/libport/range.hxx
include/libport/read-stdin.hh
include/libport/ref-counted.hh
include/libport/ref-counted.hxx
include/libport/ref-pt.hh
include/libport/reserved-vector.hh
include/libport/reserved-vector.hxx
include/libport/safe-container.hh
include/libport/safe-container.hxx
include/libport/sched.hh
include/libport/select-const.hh
include/libport/select-ref.hh
include/libport/semaphore.h
include/libport/semaphore.hh
include/libport/semaphore.hxx
include/libport/separate.hh
include/libport/separate.hxx
include/libport/separator.hh
include/libport/singleton-ptr.hh
include/libport/singleton-ptr.hxx
include/libport/smart-allocated.hh
include/libport/smart-allocated.hxx
include/libport/specific-ptr.hh
include/libport/specific-ptr.hxx
include/libport/sstream
include/libport/sstream.hxx
include/libport/statistics.hh
include/libport/statistics.hxx
include/libport/symbol.hh
include/libport/symbol.hxx
include/libport/synchronizer.hh
include/libport/synchronizer.hxx
include/libport/sys/param.h
include/libport/sys/prctl.h
include/libport/sys/select.h
include/libport/sys/socket.h
include/libport/sys/stat.h
include/libport/sys/stat.hxx
include/libport/sys/time.h
include/libport/sys/time.hxx
include/libport/sys/types.h
include/libport/sys/utsname.h
include/libport/sys/utsname.hxx
include/libport/sys/wait.h
include/libport/sysexits.hh
include/libport/system-warning-pop.hh
include/libport/system-warning-push.hh
include/libport/thread-data.hh
include/libport/thread-pool.hh
include/libport/thread.hh
include/libport/thread.hxx
include/libport/throw-exception.hh
include/libport/time.hh
include/libport/time.hxx
include/libport/timer.hh
include/libport/timer.hxx
include/libport/tokenizer.hh
include/libport/tr1/type_traits
include/libport/traits.hh
include/libport/type-info.hh
include/libport/type-info.hxx
include/libport/typelist.hh
include/libport/ufloat.h
include/libport/ufloat.hh
include/libport/ufloat.hxx
include/libport/umatrix.hh
include/libport/unique-pointer.hh
include/libport/unique-pointer.hxx
include/libport/unistd.h
include/libport/unit-test.hh
include/libport/utime.hh
include/libport/utime.hxx
include/libport/uvector.hh
include/libport/valgrind.hh
include/libport/vector.hh
include/libport/version.hh
include/libport/visitor.hh
include/libport/warning-pop.hh
include/libport/warning-push.hh
include/libport/weak-ptr.hh
include/libport/weak-ptr.hxx
include/libport/windows.hh
include/libport/xalloc.hh
include/libport/xalloc.hxx
include/libport/xlocale.hh
include/libport/xltdl.hh
include/libport/xltdl.hxx
include/sched/configuration.hh
include/sched/coroutine-coro.hxx
include/sched/coroutine-hooks.hh
include/sched/coroutine-local-storage.hh
include/sched/coroutine-local-storage.hxx
include/sched/coroutine.hh
include/sched/coroutine.hxx
include/sched/exception.hh
include/sched/exception.hxx
include/sched/export.hh
include/sched/fwd.hh
include/sched/job.hh
include/sched/job.hxx
include/sched/libcoroutine/386-ucontext.h
include/sched/libcoroutine/Common.h
include/sched/libcoroutine/Coro.h
include/sched/libcoroutine/amd64-ucontext.h
include/sched/libcoroutine/power-ucontext.h
include/sched/libcoroutine/taskimpl.h
include/sched/local.mk
include/sched/scheduler.hh
include/sched/scheduler.hxx
include/sched/tag.hh
include/sched/tag.hxx
include/serialize/binary-i-serializer.hh
include/serialize/binary-i-serializer.hxx
include/serialize/binary-o-serializer.hh
include/serialize/binary-o-serializer.hxx
include/serialize/exception.hh
include/serialize/export.hh
include/serialize/fwd.hh
include/serialize/i-serializer.hh
include/serialize/i-serializer.hxx
include/serialize/o-serializer.hh
include/serialize/o-serializer.hxx
include/serialize/serialize.hh
)
#cmakelist avec regle install a la racine d'include

qi_install_header(${PUBLIC_HEADERS} KEEP_RELATIVE_PATHS)
qi_submodule_create("libport" ${CONFIG_H}
                                   ${PUBLIC_HEADERS}
 lib/libport/asio-impl.hxx
lib/libport/asio-ssl.cc
lib/libport/asio.cc
lib/libport/backtrace.cc
lib/libport/base64.cc
lib/libport/buffer-stream.cc
lib/libport/cli.cc
lib/libport/csignal.cc
lib/libport/cstdio.cc
lib/libport/cstdlib.cc
lib/libport/cstring.cc
lib/libport/ctime.cc
lib/libport/damerau-levenshtein-distance.cc
lib/libport/debug.cc
lib/libport/deref.cc
lib/libport/dirent.cc
lib/libport/echo.cc
lib/libport/escape.cc
lib/libport/fd-stream.cc
lib/libport/file-library.cc
lib/libport/file-system.cc
lib/libport/fnmatch.cc
lib/libport/format.cc
lib/libport/hmac-sha1.cc
lib/libport/indent.cc
lib/libport/input-arguments.cc
lib/libport/io-stream.cc
lib/libport/ip-semaphore.cc
lib/libport/locale.cc
lib/libport/markup-ostream.cc
lib/libport/option-parser.cc
lib/libport/package-info.cc
lib/libport/path.cc
lib/libport/pid-file.cc
lib/libport/program-name.cc
lib/libport/read-stdin.cc
lib/libport/sched.cc
lib/libport/semaphore-rpl.cc
lib/libport/semaphore.cc
lib/libport/symbol.cc
lib/libport/synchronizer.cc
lib/libport/sys/utsname.cc
lib/libport/sysexits.cc
lib/libport/thread-pool.cc
lib/libport/timer.cc
lib/libport/tokenizer.cc
lib/libport/type-info.cc
lib/libport/ufloat.cc
lib/libport/umatrix.cc
lib/libport/unique-pointer.cc
lib/libport/unistd.cc
lib/libport/utime.cc
lib/libport/uvector.cc
lib/libport/version.cc
lib/libport/xalloc.cc
lib/libport/xlocale.cc
lib/libport/xltdl.cc
lib/sched/configuration.cc
lib/sched/coroutine-hooks.cc
lib/sched/job.cc
lib/sched/libcoroutine/Base.h
lib/sched/libcoroutine/Coro.cc
lib/sched/libcoroutine/asm.S
lib/sched/libcoroutine/context.c
lib/sched/libcoroutine/context.cc
lib/sched/scheduler.cc
lib/sched/tag.cc
lib/sched/uclibc-workaround.cc
lib/serialize/binary-i-serializer.cc
lib/serialize/binary-o-serializer.cc
lib/serialize/exception.cc
lib/serialize/o-serializer.cc


)

qi_create_lib(port
  SUBMODULE libport
  DEPENDS RT JPEG BOOST BOOST_DATE_TIME BOOST_SYSTEM BOOST_THREAD)

qi_stage_lib(port)
